--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,7 +12,7 @@ fastapi = "^0.109.1"
 python-dotenv = "^1.0.0"
 llama-index = "^0.10.15"
 llama-index-core = "^0.10.15"
-llama-index-agent-openai = "0.1.5"
+llama-index-program-openai = "^0.1.6"
 
 [tool.poetry.dependencies.uvicorn]
 extras = [ "standard" ]
